--- a/packages/fether-react/src/assets/sass/components/_header-nav.scss
+++ b/packages/fether-react/src/assets/sass/components/_header-nav.scss
@@ -29,10 +29,6 @@
     justify-content: center;
     z-index: 2;
 
-    &.-header-tokens {
-      justify-content: left; /* account info horizontal alignment */
-    }
-
     a,
     a:link,
     a:visited,
